--- a/ios/myProject/Info.plist
+++ b/ios/myProject/Info.plist
@@ -36,6 +36,10 @@
 	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We need access to your camera to take photos.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need access to your microphone to record audio.</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>arm64</string>
@@ -48,5 +52,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+    <string>Fonts/AntDesign.ttf</string>
+    <string>Fonts/FontAwesome.ttf</string>
+    <!-- Add any other fonts you need -->
+	</array>
 </dict>
 </plist>
