--- a/package.json
+++ b/package.json
@@ -10,8 +10,31 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-vector-icons/evil-icons": "^1.10.1",
+    "@react-native-vector-icons/fontawesome6": "^6.7.1",
+    "@react-navigation/bottom-tabs": "^7.0.14",
+    "@react-navigation/native": "^7.0.9",
+    "@react-navigation/stack": "^7.0.14",
+    "@reduxjs/toolkit": "^2.4.0",
+    "axios": "^1.7.8",
+    "moment": "^2.30.1",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-animatable": "^1.4.0",
+    "react-native-camera-kit": "^13.0.0",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.12.5",
+    "react-native-permissions": "^5.2.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.12.4",
+    "react-redux": "^9.1.2",
+    "react-router-native": "^6.28.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
